compiler/testData/diagnostics/testsWithJsStdLib/native/externalFunInterface.kt
external fun interface <!WRONG_EXTERNAL_DECLARATION!>I<!> {
    fun f()
}